Fix photo alignment to center

--- a/app/assets/stylesheets/_photos.css.scss
+++ b/app/assets/stylesheets/_photos.css.scss
@@ -5,7 +5,7 @@
         margin: 10px 0;
     }
 
-    .image-responsive {
+    .img-responsive {
         margin: 10px auto;
     }
 }
